--- a/tools-safety/battery-powered-tools-pros-and-cons.html
+++ b/tools-safety/battery-powered-tools-pros-and-cons.html
@@ -88,7 +88,7 @@
   <p>Battery ecosystems make it easy to own multiple specialized tools. That increases touchpoints across the yard.</p>
   <p>The pattern aligns with <a href="/tools-safety/lawn-tools-most-people-dont-need.html">Lawn Tools Most People Don’t Need</a>, where extra passes show up as scattered thinning.</p>
 
-  <h2>The irreversible boundary is uneven completion</h2>
+  <h2>The limiting boundary is uneven completion</h2>
   <p>Once work repeatedly stops before sections can be finished evenly, the lawn never shows a consistent surface.</p>
   <p>At that point, more battery swaps only extend the same visible imbalance.</p>
 
