--- a/tools-safety/blowers-vs-rakes-for-lawn-cleanup.html
+++ b/tools-safety/blowers-vs-rakes-for-lawn-cleanup.html
@@ -89,7 +89,7 @@
   <p>Worn nozzles or bent rake tines change how force is delivered. Control drops without obvious failure.</p>
   <p>The lawn damage follows the same compounding pattern described in <a href="/tools-safety/why-equipment-problems-compound-lawn-issues.html">Why Equipment Problems Compound Lawn Issues</a>.</p>
 
-  <h2>The irreversible boundary is surface loosening</h2>
+  <h2>The constraint forms at surface loosening</h2>
   <p>Once cleanup repeatedly loosens grass and soil faster than it settles back, the surface stops holding together.</p>
   <p>From that point on, each cleanup leaves more visible disruption than the last.</p>
 
