--- a/tools-safety/broadcast-vs-drop-spreaders-explained.html
+++ b/tools-safety/broadcast-vs-drop-spreaders-explained.html
@@ -84,7 +84,7 @@
   <p>Broadcast spreaders release material beyond the lawn boundary. Particles travel farther than expected.</p>
   <p>The risk mirrors <a href="/tools-safety/why-pets-are-at-risk-during-yard-work.html">Why Pets Are at Risk During Yard Work</a>, where movement extends danger past the work zone.</p>
 
-  <h2>The irreversible boundary is visible patterning</h2>
+  <h2>The limiting factor appears as visible patterning</h2>
   <p>Once stripes or bands appear, the placement error is locked in for that cycle.</p>
   <p>No later adjustment removes the visual divide.</p>
 
