--- a/tools-safety/common-lawn-tool-myths.html
+++ b/tools-safety/common-lawn-tool-myths.html
@@ -84,7 +84,7 @@
   <p>Rough borders are blamed on grass or soil instead of tool behavior.</p>
   <p>This reflects <a href="/tools-safety/why-trimmers-damage-grass-edges.html">Why Trimmers Damage Grass Edges</a>, where contact patterns matter.</p>
 
-  <h2>The irreversible boundary is belief lock-in</h2>
+  <h2>The constraint becomes belief lock-in</h2>
   <p>Once myths guide behavior long enough, damage accumulates without challenge. Correction arrives too late.</p>
   <p>You notice consistent problems that never fully resolve.</p>
 
