--- a/tools-safety/common-lawn-tool-safety-hazards.html
+++ b/tools-safety/common-lawn-tool-safety-hazards.html
@@ -84,7 +84,7 @@
   <p>Pushing through resistance narrows control further. Strength replaces precision.</p>
   <p>At that point, <a href="/tools-safety/when-hiring-help-is-the-safer-option.html">When Hiring Help Is the Safer Option</a> becomes evident as limits are exceeded.</p>
 
-  <h2>The irreversible boundary is uncontrolled motion</h2>
+  <h2>The limiting threshold is uncontrolled motion</h2>
   <p>When a tool moves without matching input, safe operation is no longer possible.</p>
   <p>From that moment on, injury risk dominates every action.</p>
 
