--- a/tools-safety/difference-between-spike-and-core-aerators.html
+++ b/tools-safety/difference-between-spike-and-core-aerators.html
@@ -84,7 +84,7 @@
   <p>Experienced operators space passes evenly and avoid overworking the same zones.</p>
   <p>The smoother surface outcome reflects <a href="/tools-safety/how-experience-reduces-tool-damage.html">How Experience Reduces Tool Damage</a>, where control limits harm.</p>
 
-  <h2>The irreversible boundary is compression without relief</h2>
+  <h2>Continuous pressure persists without release</h2>
   <p>When soil closes immediately after disturbance, neither tool produces lasting change.</p>
   <p>Beyond that point, additional passes only add visible disruption.</p>
 
