--- a/tools-safety/difference-between-trimming-and-edging.html
+++ b/tools-safety/difference-between-trimming-and-edging.html
@@ -88,7 +88,7 @@
   <p>Edging places tools close to walkways, pets, and people. Loss of control happens abruptly.</p>
   <p>The hazard matches <a href="/tools-safety/why-pets-are-at-risk-during-yard-work.html">Why Pets Are at Risk During Yard Work</a>, where proximity magnifies consequences.</p>
 
-  <h2>The irreversible boundary is edge retreat</h2>
+  <h2>The constraint shows up as edge retreat</h2>
   <p>Once grass no longer reaches the original boundary, the lawn has lost ground permanently. Soil stays exposed.</p>
   <p>From that point on, edging widens the bare strip instead of refining it.</p>
 
