--- a/tools-safety/electric-vs-gas-lawn-equipment.html
+++ b/tools-safety/electric-vs-gas-lawn-equipment.html
@@ -80,7 +80,7 @@
   <p>Electric tools make frequent starts and stops easy, which leads to relaxed handling. Gas tools demand setup but encourage deliberate use.</p>
   <p>This behavior mirrors <a href="/tools-safety/why-safety-features-get-ignored.html">Why Safety Features Get Ignored</a>, where familiarity replaces caution.</p>
 
-  <h2>The irreversible boundary is loss of tactile warning</h2>
+  <h2>The limiting threshold is loss of tactile warning</h2>
   <p>Once the operator can no longer feel rising resistance or instability, correction stops working. The tool continues delivering force without clear signals.</p>
   <p>From that point on, visible damage accumulates faster than it can be corrected.</p>
 
