--- a/tools-safety/how-children-get-hurt-around-lawn-tools.html
+++ b/tools-safety/how-children-get-hurt-around-lawn-tools.html
@@ -84,7 +84,7 @@
   <p>Children move fast and quietly. A single glance away collapses the remaining buffer.</p>
   <p>You turn back to find someone closer than before.</p>
 
-  <h2>The irreversible boundary is contact with moving parts or debris</h2>
+  <h2>The failure boundary occurs at contact with moving parts or debris</h2>
   <p>Once contact happens, separation no longer matters. Recovery is immediate and uncertain.</p>
   <p>You hear a sharp cry and everything stops.</p>
 
