--- a/tools-safety/how-cold-affects-tool-safety.html
+++ b/tools-safety/how-cold-affects-tool-safety.html
@@ -84,7 +84,7 @@
   <p>Reduced feel makes even passes harder to judge. Output varies without being noticed.</p>
   <p>The effect mirrors <a href="/tools-safety/why-uneven-spreading-causes-problems.html">Why Uneven Spreading Causes Problems</a>, where feedback loss creates visible patterns.</p>
 
-  <h2>The irreversible boundary is loss of dexterity</h2>
+  <h2>The functional limit is loss of dexterity</h2>
   <p>Once fingers can no longer modulate pressure or position, recovery is not possible mid-task. Control is already gone.</p>
   <p>You fumble a simple adjustment you normally never miss.</p>
 
