--- a/tools-safety/how-edging-affects-lawn-health.html
+++ b/tools-safety/how-edging-affects-lawn-health.html
@@ -84,7 +84,7 @@
   <p>Some soil disruption can benefit turf when it relieves compaction instead of removing tissue. The difference is whether grass is given space or stripped away.</p>
   <p>This contrast becomes clear in <a href="/tools-safety/when-aeration-tools-make-sense.html">When Aeration Tools Make Sense</a>, where openings recover instead of collapsing.</p>
 
-  <h2>The irreversible boundary is edge retreat</h2>
+  <h2>The critical limit appears as edge retreat</h2>
   <p>Once grass no longer reaches the original boundary, the lawn loses ground permanently. Soil stays exposed and the line continues to move inward.</p>
   <p>From that point on, edging enlarges the bare strip instead of sharpening it.</p>
 
