--- a/tools-safety/how-experience-reduces-tool-damage.html
+++ b/tools-safety/how-experience-reduces-tool-damage.html
@@ -84,7 +84,7 @@
   <p>Moisture, density, and resistance alter how force transfers. Experience adjusts technique instead of pushing through.</p>
   <p>This aligns with <a href="/watering-irrigation/why-lawns-look-worse-after-watering.html">Why Lawns Look Worse After Watering</a>, where conditions mask strain.</p>
 
-  <h2>The irreversible boundary is cumulative fatigue failure</h2>
+  <h2>The structural limit emerges through cumulative fatigue failure</h2>
   <p>Once internal parts deform or crack, recovery is impossible mid-use. The damage is already locked in.</p>
   <p>You hear grinding or feel binding that did not exist before.</p>
 
