--- a/tools-safety/how-fatigue-leads-to-accidents.html
+++ b/tools-safety/how-fatigue-leads-to-accidents.html
@@ -84,7 +84,7 @@
   <p>When recovery is gone, saving effort feels smart. The brain chooses ease over precision.</p>
   <p>You catch yourself skipping steps you normally never skip.</p>
 
-  <h2>The irreversible boundary is loss of situational awareness</h2>
+  <h2>The operational limit is loss of situational awareness</h2>
   <p>Once surroundings stop registering in real time, correction is no longer possible. From here, accidents happen faster than thought.</p>
   <p>You suddenly realize something is wrong only after impact.</p>
 
