--- a/tools-safety/how-hearing-damage-happens-in-yard-work.html
+++ b/tools-safety/how-hearing-damage-happens-in-yard-work.html
@@ -84,7 +84,7 @@
   <p>Hearing does not fully reset between exposures.</p>
   <p>Sounds feel quieter over time even though equipment has not changed.</p>
 
-  <h2>The irreversible boundary is sensory desensitization</h2>
+  <h2>The perceptual limit develops as sensory desensitization</h2>
   <p>Once the ear stops recovering fully, normal sound never returns.</p>
   <p>From that point on, loss progresses even under the same conditions.</p>
 
