--- a/tools-safety/how-lawn-aerators-actually-work.html
+++ b/tools-safety/how-lawn-aerators-actually-work.html
@@ -88,7 +88,7 @@
   <p>Fast passes reduce hole depth and consistency. Contact becomes uneven.</p>
   <p>The risk and surface disruption match <a href="/tools-safety/why-rushing-causes-tool-injuries.html">Why Rushing Causes Tool Injuries</a>, where loss of control leaves visible errors.</p>
 
-  <h2>The irreversible boundary is surface collapse</h2>
+  <h2>The structural threshold is surface collapse</h2>
   <p>Once openings repeatedly close before grass can respond, aeration no longer produces change.</p>
   <p>Further passes only add disturbance without recovery.</p>
 
