--- a/tools-safety/how-lawn-injuries-actually-happen.html
+++ b/tools-safety/how-lawn-injuries-actually-happen.html
@@ -84,7 +84,7 @@
   <p>Once timing is lost, the sequence unfolds faster than conscious correction.</p>
   <p>Contact happens before awareness catches up.</p>
 
-  <h2>The irreversible boundary is mismatched motion</h2>
+  <h2>Desynchronized movement creates instability</h2>
   <p>When tool movement no longer matches expectation, safe control is gone.</p>
   <p>From that point on, injury is no longer preventable in the moment.</p>
 
