--- a/tools-safety/how-leaf-buildup-affects-grass.html
+++ b/tools-safety/how-leaf-buildup-affects-grass.html
@@ -88,7 +88,7 @@
   <p>Moving heavy, wet leaf piles requires repeated lifting and awkward motion. Fatigue sets in quickly.</p>
   <p>The risk follows the pattern in <a href="/tools-safety/why-improper-lifting-causes-back-injuries.html">Why Improper Lifting Causes Back Injuries</a>, where strain accumulates silently.</p>
 
-  <h2>The irreversible boundary is prolonged coverage</h2>
+  <h2>The exposure limit is prolonged coverage</h2>
   <p>Once leaves remain in place long enough for grass to weaken beyond rebound, recovery stops.</p>
   <p>After that point, removal exposes bare or thinned areas instead of healthy turf.</p>
 
