--- a/tools-safety/how-long-lawn-tools-typically-last.html
+++ b/tools-safety/how-long-lawn-tools-typically-last.html
@@ -84,7 +84,7 @@
   <p>Cleaning and adjustment delay failure but cannot reverse wear. Limits still arrive.</p>
   <p>You keep tuning without restoring original feel.</p>
 
-  <h2>The irreversible boundary is tolerance collapse</h2>
+  <h2>The critical limit is tolerance collapse</h2>
   <p>Once key fits and surfaces lose true shape, control cannot be restored mid-use. Performance is locked lower.</p>
   <p>You feel vibration or binding that never resolves.</p>
 
