--- a/tools-safety/how-often-lawn-tools-should-be-used.html
+++ b/tools-safety/how-often-lawn-tools-should-be-used.html
@@ -80,7 +80,7 @@
   <p>Weak spots attract attention, but repeated passes enlarge them. The grass around the area thins, and the boundary between healthy and damaged turf becomes jagged.</p>
   <p>The issue grows even though effort is concentrated.</p>
 
-  <h2>The irreversible boundary is constant exposure</h2>
+  <h2>The damage point forms under constant exposure</h2>
   <p>Once tools are used so frequently that the surface never settles, visible wear replaces temporary marks. Lines stay pressed into the lawn, soil remains exposed, and edges lose definition.</p>
   <p>Beyond this point, stopping briefly does not restore appearance.</p>
 
