--- a/tools-safety/how-poor-visibility-causes-accidents.html
+++ b/tools-safety/how-poor-visibility-causes-accidents.html
@@ -84,7 +84,7 @@
   <p>Work that depends on tight alignment collapses quickly. Small errors turn into large deviations.</p>
   <p>This mirrors <a href="/tools-safety/how-edging-affects-lawn-health.html">How Edging Affects Lawn Health</a>, where placement decides outcome.</p>
 
-  <h2>The irreversible boundary is unseen contact</h2>
+  <h2>The failure point emerges from unseen contact</h2>
   <p>Once something is struck without being seen, recovery is no longer possible mid-motion. The result is already set.</p>
   <p>You hear or feel impact before you register what was hit.</p>
 
