--- a/tools-safety/how-proper-gear-improves-efficiency.html
+++ b/tools-safety/how-proper-gear-improves-efficiency.html
@@ -84,7 +84,7 @@
   <p>Even good gear fails when used outside its range. Efficiency drops as correction replaces action.</p>
   <p>This mirrors <a href="/tools-safety/how-tool-misuse-damages-lawns.html">How Tool Misuse Damages Lawns</a>, where effort backfires.</p>
 
-  <h2>The irreversible boundary is loss of alignment</h2>
+  <h2>The stability limit is loss of alignment</h2>
   <p>Once gear no longer tracks true, efficiency cannot be restored mid-task. Progress slows permanently.</p>
   <p>You feel constant resistance that never settles.</p>
 
