--- a/tools-safety/how-repetitive-motion-damages-joints.html
+++ b/tools-safety/how-repetitive-motion-damages-joints.html
@@ -84,7 +84,7 @@
   <p>Inflammation shows up once surfaces are already irritated. Sensation lags damage.</p>
   <p>You feel heat or swelling after you’re done, not during.</p>
 
-  <h2>The irreversible boundary is joint surface breakdown</h2>
+  <h2>The mechanical limit is joint surface breakdown</h2>
   <p>Once cartilage and supporting tissue wear past tolerance, recovery does not return function. The system cannot rewind.</p>
   <p>You feel grinding or catching during simple movements.</p>
 
