--- a/tools-safety/how-runtime-limits-affect-yard-work.html
+++ b/tools-safety/how-runtime-limits-affect-yard-work.html
@@ -84,7 +84,7 @@
   <p>Multiple short sessions increase physical strain compared to one continuous pass. Grip, balance, and focus degrade.</p>
   <p>The lawn reflects this as crooked lines and uneven tracking that worsen with each restart.</p>
 
-  <h2>The irreversible boundary is repeated partial completion</h2>
+  <h2>The failure threshold forms through repeated partial completion</h2>
   <p>Once work is consistently broken into unfinished segments, uniform results stop being possible. Every new session layers misalignment onto the last.</p>
   <p>From that point forward, visible inconsistency replaces clean finish.</p>
 
