--- a/tools-safety/how-small-injuries-turn-serious.html
+++ b/tools-safety/how-small-injuries-turn-serious.html
@@ -84,7 +84,7 @@
   <p>Low-level pain becomes background noise. The body stops triggering urgency.</p>
   <p>You work through discomfort without pausing.</p>
 
-  <h2>The irreversible boundary is structural strain</h2>
+  <h2>The load limit is reached through structural strain</h2>
   <p>Once fibers tear or joints destabilize, recovery cannot keep pace with use. The condition advances on its own.</p>
   <p>You feel sharp pain during normal movement.</p>
 
