--- a/tools-safety/how-spreaders-actually-distribute-material.html
+++ b/tools-safety/how-spreaders-actually-distribute-material.html
@@ -88,7 +88,7 @@
   <p>Moving parts, thrown material, and uneven footing introduce risk during operation.</p>
   <p>The exposure aligns with <a href="/tools-safety/common-lawn-tool-safety-hazards.html">Common Lawn Tool Safety Hazards</a>, where routine use masks danger.</p>
 
-  <h2>The irreversible boundary is patterned response</h2>
+  <h2>The behavioral limit forms as patterned response</h2>
   <p>Once growth responds in visible stripes, the distribution error is locked in for that cycle.</p>
   <p>No adjustment afterward removes the pattern.</p>
 
