--- a/tools-safety/how-storage-affects-lawn-tools.html
+++ b/tools-safety/how-storage-affects-lawn-tools.html
@@ -80,7 +80,7 @@
   <p>Linkages and gates move slightly while sitting. Settings no longer reflect actual output.</p>
   <p>This silent change matches <a href="/tools-safety/why-calibration-matters-for-spreaders.html">Why Calibration Matters for Spreaders</a>, where small shifts leave visible patterns.</p>
 
-  <h2>The irreversible boundary is set alignment</h2>
+  <h2>The fixed limit emerges as set alignment</h2>
   <p>Once parts take a permanent set, normal movement cannot return.</p>
   <p>From that point on, every use reinforces the imbalance.</p>
 
