--- a/tools-safety/how-to-reduce-injury-risk-while-working.html
+++ b/tools-safety/how-to-reduce-injury-risk-while-working.html
@@ -84,7 +84,7 @@
   <p>Once movement is underway, it carries past safe limits. Recognition lags motion.</p>
   <p>You feel pulled into finishing instead of adjusting.</p>
 
-  <h2>The irreversible boundary is delayed correction</h2>
+  <h2>The point of failure arises from delayed correction</h2>
   <p>When reaction comes after force commits, recovery is no longer possible. The event is already set.</p>
   <p>You recognize the problem only after contact or strain.</p>
 
