--- a/tools-safety/how-tool-balance-affects-control.html
+++ b/tools-safety/how-tool-balance-affects-control.html
@@ -80,7 +80,7 @@
   <p>Without motors to smooth motion, manual tools transmit imbalance directly to the hands. Drift becomes obvious immediately.</p>
   <p>This is why <a href="/tools-safety/when-manual-tools-make-more-sense.html">When Manual Tools Make More Sense</a> often shows cleaner results in tight or delicate areas.</p>
 
-  <h2>The irreversible boundary is uncontrolled swing</h2>
+  <h2>Instability starts during free swing</h2>
   <p>Once a tool’s balance causes it to swing faster than it can be corrected, precision collapses. Slowing movement no longer restores alignment.</p>
   <p>From that point forward, each pass adds a new visible error beside the last.</p>
 
