--- a/tools-safety/how-tool-failure-delays-lawn-recovery.html
+++ b/tools-safety/how-tool-failure-delays-lawn-recovery.html
@@ -84,7 +84,7 @@
   <p>Unpredictable tools demand more attention, pulling focus from surroundings.</p>
   <p>This connects to <a href="/tools-safety/how-children-get-hurt-around-lawn-tools.html">How Children Get Hurt Around Lawn Tools</a>, where distraction widens exposure.</p>
 
-  <h2>The irreversible boundary is compounded turf injury</h2>
+  <h2>Progressive damage emerges through compounded turf injury</h2>
   <p>Once grass tissue and roots are repeatedly damaged, recovery resets entirely. Time cannot be reclaimed.</p>
   <p>You see thinning that does not rebound.</p>
 
