--- a/tools-safety/how-tool-kickback-happens.html
+++ b/tools-safety/how-tool-kickback-happens.html
@@ -84,7 +84,7 @@
   <p>When motion reverses, it travels back along the path of control. The operator becomes the nearest stop.</p>
   <p>You feel the handle drive toward your body.</p>
 
-  <h2>The irreversible boundary is uncontrolled reversal</h2>
+  <h2>Directional collapse follows uncontrolled reversal</h2>
   <p>Once force changes direction faster than reaction, recovery is impossible mid-event. The outcome is already set.</p>
   <p>You realize what happened only after impact.</p>
 
