--- a/tools-safety/how-tool-maintenance-extends-life.html
+++ b/tools-safety/how-tool-maintenance-extends-life.html
@@ -80,7 +80,7 @@
   <p>After alignment breaks down, wear migrates rapidly to adjacent components. Failure accelerates.</p>
   <p>The tool begins showing multiple issues at once instead of one isolated problem.</p>
 
-  <h2>The irreversible boundary is tolerance failure</h2>
+  <h2>Capacity breakdown triggers systemic overload</h2>
   <p>Once components no longer fit or track correctly, normal operation cannot resume.</p>
   <p>From that point on, use increases damage instead of productivity.</p>
 
