--- a/tools-safety/how-tool-misuse-damages-lawns.html
+++ b/tools-safety/how-tool-misuse-damages-lawns.html
@@ -80,7 +80,7 @@
   <p>Misuse becomes damaging when the same contact happens again before the surface stops showing the last pass. The yard then carries multiple layers of unfinished wear.</p>
   <p>The signal is that marks never disappear, which is why <a href="/tools-safety/how-often-lawn-tools-should-be-used.html">How Often Lawn Tools Should Be Used</a> shows up as a visible limit, not a preference.</p>
 
-  <h2>The irreversible boundary is when correction creates new damage</h2>
+  <h2>Adjustment attempts introduce fresh harm</h2>
   <p>Once controllable contact is lost, trying to fix the damage with more tool work produces additional damage next to the first. The surface becomes a patchwork of overlapping flaws instead of a clean finish.</p>
   <p>Past this boundary, the lawn looks worse after every attempt, even when the work is careful.</p>
 
