--- a/tools-safety/how-tool-noise-affects-awareness.html
+++ b/tools-safety/how-tool-noise-affects-awareness.html
@@ -88,7 +88,7 @@
   <p>Even passes sound even when noise saturates. Output varies without an audible cue.</p>
   <p>This parallels <a href="/tools-safety/broadcast-vs-drop-spreaders-explained.html">Broadcast vs Drop Spreaders Explained</a>, where pattern depends on feedback.</p>
 
-  <h2>The irreversible boundary is lost situational hearing</h2>
+  <h2>Environmental cues disappear during auditory loss</h2>
   <p>Once sound can no longer signal change, recovery is not possible mid-motion. The next correction arrives after commitment.</p>
   <p>You notice the mistake only after contact.</p>
 
