--- a/tools-safety/how-tool-quality-impacts-safety.html
+++ b/tools-safety/how-tool-quality-impacts-safety.html
@@ -84,7 +84,7 @@
   <p>Longer sessions push weak parts past tolerance. Failures surface late in the task.</p>
   <p>This aligns with <a href="/tools-safety/how-runtime-limits-affect-yard-work.html">How Runtime Limits Affect Yard Work</a>, where duration reveals risk.</p>
 
-  <h2>The irreversible boundary is structural instability</h2>
+  <h2>Framework integrity collapses under imbalance</h2>
   <p>Once frames, mounts, or housings flex permanently, behavior cannot be predicted. Safety margins vanish.</p>
   <p>You feel constant looseness that never settles.</p>
 
