--- a/tools-safety/how-tool-wear-affects-results.html
+++ b/tools-safety/how-tool-wear-affects-results.html
@@ -84,7 +84,7 @@
   <p>More force transfers into the body when tools stop doing their share. Output stays flat while fatigue climbs.</p>
   <p>The effect echoes <a href="/tools-safety/why-yard-work-causes-long-term-pain.html">Why Yard Work Causes Long-Term Pain</a>, where repetition carries the cost.</p>
 
-  <h2>The irreversible boundary is material deformation</h2>
+  <h2>Permanent shape change develops within solids</h2>
   <p>Once components bend, chip, or lose true shape, precision cannot be restored mid-use. Performance is locked lower.</p>
   <p>You hear scraping or feel binding that never used to exist.</p>
 
