--- a/tools-safety/how-trimmers-cause-eye-injuries.html
+++ b/tools-safety/how-trimmers-cause-eye-injuries.html
@@ -84,7 +84,7 @@
   <p>Once debris leaves the cutting zone, there is no corrective window.</p>
   <p>Impact happens before conscious response begins.</p>
 
-  <h2>The irreversible boundary is airborne debris</h2>
+  <h2>Flying fragments create uncontrolled hazard</h2>
   <p>After material is launched, control no longer exists.</p>
   <p>Injury risk is locked in the moment debris leaves the trimmer.</p>
 
