--- a/tools-safety/how-wet-conditions-increase-injury-risk.html
+++ b/tools-safety/how-wet-conditions-increase-injury-risk.html
@@ -84,7 +84,7 @@
   <p>Moisture changes how cutting meets resistance. Lines grab and release instead of staying even.</p>
   <p>The effect echoes <a href="/tools-safety/difference-between-trimming-and-edging.html">Difference Between Trimming and Edging</a>, where contact style matters.</p>
 
-  <h2>The irreversible boundary is a full loss of traction</h2>
+  <h2>Complete grip failure removes stability</h2>
   <p>Once feet or hands slide faster than correction, recovery is no longer possible. Motion commits the event.</p>
   <p>You realize the fall or surge only after it starts.</p>
 
