--- a/tools-safety/how-yard-accidents-can-be-prevented.html
+++ b/tools-safety/how-yard-accidents-can-be-prevented.html
@@ -84,7 +84,7 @@
   <p>Grass density, slope, moisture, and debris alter resistance suddenly. Familiar conditions turn unfamiliar.</p>
   <p>The surface reacts differently than expected.</p>
 
-  <h2>The irreversible boundary is delayed recognition</h2>
+  <h2>Late awareness prevents timely response</h2>
   <p>Once awareness lags behind motion, prevention is no longer possible. The incident is already unfolding.</p>
   <p>You realize danger only after movement starts.</p>
 
