--- a/tools-safety/lawn-tools-most-people-dont-need.html
+++ b/tools-safety/lawn-tools-most-people-dont-need.html
@@ -80,7 +80,7 @@
   <p>Weight compresses soil and slows how quickly roots can resume function. The lawn stays in recovery longer after each pass.</p>
   <p>That delay explains <a href="/tools-safety/why-tool-weight-matters.html">Why Tool Weight Matters</a> once recovery time becomes scarce.</p>
 
-  <h2>The irreversible boundary is crossed when recovery never completes</h2>
+  <h2>Failure occurs once restoration cannot finish</h2>
   <p>When disturbance happens before the lawn finishes repairing, recovery time goes to zero. At that point, damage accumulates faster than healing can occur.</p>
   <p>Beyond this boundary, stopping work no longer produces quick improvement because the system has already fallen behind.</p>
 
