--- a/tools-safety/mistakes-that-increase-injury-risk.html
+++ b/tools-safety/mistakes-that-increase-injury-risk.html
@@ -84,7 +84,7 @@
   <p>Confidence based on past success skips checks. Conditions rarely repeat exactly.</p>
   <p>You proceed without looking closely.</p>
 
-  <h2>The irreversible boundary is delayed response</h2>
+  <h2>Slow reaction undermines corrective action</h2>
   <p>Once movement begins before recognition, prevention ends. Reaction becomes the only option.</p>
   <p>You realize the mistake after motion starts.</p>
 
