--- a/tools-safety/mistakes-that-shorten-tool-life.html
+++ b/tools-safety/mistakes-that-shorten-tool-life.html
@@ -84,7 +84,7 @@
   <p>Starting and stopping without full cycles prevents lubrication and alignment from settling.</p>
   <p>The tool feels rougher each time you pick it up.</p>
 
-  <h2>The irreversible boundary is tolerance collapse</h2>
+  <h2>System capacity gives way under accumulated stress</h2>
   <p>Once surfaces lose true shape, smooth operation cannot be restored. Wear accelerates on its own.</p>
   <p>You feel constant vibration that never fades.</p>
 
