--- a/tools-safety/push-vs-self-propelled-mowers-explained.html
+++ b/tools-safety/push-vs-self-propelled-mowers-explained.html
@@ -84,7 +84,7 @@
   <p>Self-propelled units repeat the same movement pattern quickly. A small steering error becomes a long visible flaw before it can be corrected.</p>
   <p>The lawn ends up with repeated arcs or diagonal scars across multiple rows.</p>
 
-  <h2>The irreversible boundary is when forward motion outpaces correction</h2>
+  <h2>Momentum exceeds adjustment capability</h2>
   <p>Once the mower moves faster than the operator can guide, accuracy collapses. Slowing hand movement no longer improves tracking.</p>
   <p>From that point on, each pass leaves new visible errors beside the last.</p>
 
