--- a/tools-safety/signs-a-tool-is-beyond-repair.html
+++ b/tools-safety/signs-a-tool-is-beyond-repair.html
@@ -88,7 +88,7 @@
   <p>As performance drops, users push harder to get through tasks. Control narrows.</p>
   <p>This aligns with <a href="/tools-safety/why-rushing-causes-tool-injuries.html">Why Rushing Causes Tool Injuries</a>, where timing collapses.</p>
 
-  <h2>The irreversible boundary is permanent deformation</h2>
+  <h2>Lasting distortion locks form</h2>
   <p>Once frames, shafts, or housings lose true shape, precision cannot be recovered. The system will not stabilize.</p>
   <p>You see visible bends or feel binding that never clears.</p>
 
