--- a/tools-safety/string-trimmer-basics-explained.html
+++ b/tools-safety/string-trimmer-basics-explained.html
@@ -88,7 +88,7 @@
   <p>Worn heads, dirty housings, and uneven feed disrupt rotation. Control degrades without obvious failure.</p>
   <p>The difference is visible in <a href="/tools-safety/how-tool-maintenance-extends-life.html">How Tool Maintenance Extends Life</a>, where smooth motion preserves surface integrity.</p>
 
-  <h2>The irreversible boundary is repeated edge erosion</h2>
+  <h2>Margin wear accelerates through recurring abrasion</h2>
   <p>Once trimming removes grass faster than it can recover, edges no longer fill in. Soil stays exposed.</p>
   <p>At that point, each pass enlarges the damaged zone.</p>
 
