--- a/tools-safety/when-aeration-does-nothing.html
+++ b/tools-safety/when-aeration-does-nothing.html
@@ -80,7 +80,7 @@
   <p>When aeration fails, the instinct is to repeat or intensify the work. That adds disturbance without benefit.</p>
   <p>The situation mirrors <a href="/tools-safety/when-hiring-help-is-the-safer-option.html">When Hiring Help Is the Safer Option</a>, where effort exceeds safe limits.</p>
 
-  <h2>The irreversible boundary is loss of surface response</h2>
+  <h2>Surface feedback disappears entirely</h2>
   <p>Once the lawn no longer reacts to openings, pressure is not the constraint. Aeration stops being relevant.</p>
   <p>From that point on, each pass only adds visible disruption.</p>
 
