--- a/tools-safety/when-aeration-tools-make-sense.html
+++ b/tools-safety/when-aeration-tools-make-sense.html
@@ -84,7 +84,7 @@
   <p>If grass is already torn or frayed, aeration cannot restore clean growth.</p>
   <p>The same lack of rebound described in <a href="/tools-safety/signs-a-mower-blade-is-dull.html">Signs a Mower Blade Is Dull</a> remains obvious after aeration.</p>
 
-  <h2>The irreversible boundary is pressure without rebound</h2>
+  <h2>Compression persists without recovery</h2>
   <p>When surface compression returns immediately after aeration, the lawn no longer responds to openings.</p>
   <p>From that point on, repeated passes only add disturbance.</p>
 
