--- a/tools-safety/when-hiring-help-is-the-safer-option.html
+++ b/tools-safety/when-hiring-help-is-the-safer-option.html
@@ -84,7 +84,7 @@
   <p>Larger areas mean hazards appear faster than they can be tracked. Awareness falls behind movement.</p>
   <p>You miss obstacles you already passed once.</p>
 
-  <h2>The irreversible boundary is overload</h2>
+  <h2>Excess demand overwhelms capacity</h2>
   <p>Once physical and mental limits are crossed together, recovery disappears. Mistakes cascade instead of clearing.</p>
   <p>You feel behind the task instead of guiding it.</p>
 
