--- a/tools-safety/when-powered-tools-are-necessary.html
+++ b/tools-safety/when-powered-tools-are-necessary.html
@@ -84,7 +84,7 @@
   <p>When powered tools are necessary, their condition matters more because mistakes happen faster. A small defect is repeated many times in minutes.</p>
   <p>This is why <a href="/tools-safety/mistakes-that-shorten-tool-life.html">Mistakes That Shorten Tool Life</a> also describe how lawns get damaged rapidly under pressure.</p>
 
-  <h2>The irreversible boundary is missing the window entirely</h2>
+  <h2>The opportunity closes before action begins</h2>
   <p>Once buildup, spread, or fatigue passes a certain point, slow correction no longer works. The system continues degrading even while work is happening.</p>
   <p>Past that boundary, powered tools are no longer optional because delay itself has become the main source of damage.</p>
 
