--- a/tools-safety/when-repairs-make-more-sense-than-replacement.html
+++ b/tools-safety/when-repairs-make-more-sense-than-replacement.html
@@ -84,7 +84,7 @@
   <p>Familiar tools carry muscle memory. Repairing them keeps handling predictable.</p>
   <p>You regain confidence without relearning movement.</p>
 
-  <h2>The irreversible boundary is frame or motor failure</h2>
+  <h2>Chassis or engine breakdown ends operation</h2>
   <p>Once the main structure or power source deforms or degrades, repair no longer restores reliability. The system cannot stabilize.</p>
   <p>You feel persistent vibration or hear grinding that never resolves.</p>
 
