--- a/tools-safety/when-tools-are-the-real-problem.html
+++ b/tools-safety/when-tools-are-the-real-problem.html
@@ -84,7 +84,7 @@
   <p>Delays push tasks into less favorable windows. Recovery slows further.</p>
   <p>You see worsening appearance instead of stabilization.</p>
 
-  <h2>The irreversible boundary is extended misapplication</h2>
+  <h2>Prolonged misuse compounds hidden damage</h2>
   <p>Once repeated stress accumulates without relief, recovery resets entirely. Lost time cannot be reclaimed.</p>
   <p>You see thinning or damage that does not rebound.</p>
 
