--- a/tools-safety/when-yard-work-causes-more-harm-than-good.html
+++ b/tools-safety/when-yard-work-causes-more-harm-than-good.html
@@ -84,7 +84,7 @@
   <p>Moisture, density, and slope alter resistance mid-job. The same motion produces harsher effects.</p>
   <p>You see tracks or gouges appear suddenly.</p>
 
-  <h2>The irreversible boundary is surface breakdown</h2>
+  <h2>Outer layer failure progresses rapidly</h2>
   <p>Once fibers and structure are torn beyond quick rebound, continued work only deepens harm.</p>
   <p>You see exposed soil or frayed grass.</p>
 
