--- a/tools-safety/when-yard-work-should-be-stopped.html
+++ b/tools-safety/when-yard-work-should-be-stopped.html
@@ -84,7 +84,8 @@
   <p>Once the body commits to finishing instead of adjusting, correction becomes delayed. Motion leads thought.</p>
   <p>You feel pulled into continuing even as conditions worsen.</p>
 
-  <h2>The irreversible boundary is loss of responsive control</h2>
+  
+  <h2>Control feedback collapses entirely</h2>
   <p>When reaction arrives after force commits, recovery is no longer possible. The event is already underway.</p>
   <p>You recognize the problem only after a slip, strain, or impact.</p>
 
