--- a/tools-safety/why-blowers-can-damage-lawns.html
+++ b/tools-safety/why-blowers-can-damage-lawns.html
@@ -84,7 +84,7 @@
   <p>Using airflow when grass is already stressed removes what little stability remains.</p>
   <p>The visible failure matches <a href="/tools-safety/when-yard-work-should-be-stopped.html">When Yard Work Should Be Stopped</a>, where surfaces never rebound.</p>
 
-  <h2>The irreversible boundary is surface exposure</h2>
+  <h2>Protective layers give way to open contact</h2>
   <p>Once repeated blowing leaves soil uncovered, grass can no longer anchor the surface.</p>
   <p>From that point on, each use enlarges the damaged area.</p>
 
