--- a/tools-safety/why-calibration-matters-for-spreaders.html
+++ b/tools-safety/why-calibration-matters-for-spreaders.html
@@ -84,7 +84,7 @@
   <p>Uneven growth caused by poor calibration becomes obvious after mowing.</p>
   <p>The contrast resembles <a href="/tools-safety/why-mower-height-is-often-wrong.html">Why Mower Height Is Often Wrong</a>, where small differences become visible across the surface.</p>
 
-  <h2>The irreversible boundary is uneven growth stages</h2>
+  <h2>Asynchronous development creates structural mismatch</h2>
   <p>Once parts of the lawn advance while others lag, they no longer respond together.</p>
   <p>No later correction brings them back into sync during the same cycle.</p>
 
