--- a/tools-safety/why-cheap-safety-gear-fails.html
+++ b/tools-safety/why-cheap-safety-gear-fails.html
@@ -84,7 +84,7 @@
   <p>Cheap gear pinches, fogs, or rubs. Users adjust or remove it mid-task.</p>
   <p>This aligns with <a href="/tools-safety/why-eye-protection-is-ignored.html">Why Eye Protection Is Ignored</a>, where friction defeats intent.</p>
 
-  <h2>The irreversible boundary is material breakdown</h2>
+  <h2>Substance integrity deteriorates under stress</h2>
   <p>Once straps stretch, lenses cloud, or padding compresses permanently, protection cannot be restored. Failure is locked in.</p>
   <p>You notice permanent looseness or haze.</p>
 
