--- a/tools-safety/why-cheap-tools-fail-faster.html
+++ b/tools-safety/why-cheap-tools-fail-faster.html
@@ -81,7 +81,7 @@
   <p>A weakened handle, loose head, or vibrating machine transfers unpredictability to the operator. Fatigue and surprise replace smooth motion.</p>
   <p>The danger aligns with <a href="/tools-safety/why-yard-work-is-more-dangerous-than-it-looks.html">Why Yard Work Is More Dangerous Than It Looks</a>, where accidents come from sudden loss of stability.</p>
 
-  <h2>The irreversible boundary is permanent deformation</h2>
+  <h2>Irrecoverable shape change becomes fixed</h2>
   <p>Once a tool bends, warps, or loosens beyond holding its original shape, it cannot deliver controlled force again. Every use after that point adds damage faster than results.</p>
   <p>Past this boundary, slowing down or being careful no longer prevents harm.</p>
 
