--- a/tools-safety/why-dirty-tools-fail-faster.html
+++ b/tools-safety/why-dirty-tools-fail-faster.html
@@ -84,7 +84,7 @@
   <p>Loss of control increases kickback, slipping, and unexpected movement.</p>
   <p>The exposure matches <a href="/tools-safety/common-lawn-tool-safety-hazards.html">Common Lawn Tool Safety Hazards</a>, where degraded tools amplify danger.</p>
 
-  <h2>The irreversible boundary is internal scoring</h2>
+  <h2>Hidden abrasion forms inside components</h2>
   <p>Once grit cuts grooves into working surfaces, smooth operation cannot return.</p>
   <p>From that point on, every use deepens the damage.</p>
 
