--- a/tools-safety/why-disabling-safety-features-is-dangerous.html
+++ b/tools-safety/why-disabling-safety-features-is-dangerous.html
@@ -84,7 +84,7 @@
   <p>Some tasks carry less stored energy by design. Removing safety from powered tools erases that difference.</p>
   <p>The contrast appears in <a href="/tools-safety/when-manual-tools-make-more-sense.html">When Manual Tools Make More Sense</a>, where limits stay visible.</p>
 
-  <h2>The irreversible boundary is unbuffered contact</h2>
+  <h2>Direct impact occurs without cushioning</h2>
   <p>Once force reaches the body without interception, recovery is not possible mid-event. The outcome is already set.</p>
   <p>You feel impact immediately instead of vibration.</p>
 
