--- a/tools-safety/why-equipment-problems-compound-lawn-issues.html
+++ b/tools-safety/why-equipment-problems-compound-lawn-issues.html
@@ -84,7 +84,7 @@
   <p>Lower-quality tools degrade faster under strain. Each flaw adds friction to the system.</p>
   <p>The effect aligns with <a href="/tools-safety/how-tool-quality-affects-lawn-results.html">How Tool Quality Affects Lawn Results</a>, where limits surface under load.</p>
 
-  <h2>The irreversible boundary is compounded turf stress</h2>
+  <h2>Accumulated grass strain escalates damage</h2>
   <p>Once grass is stressed repeatedly without recovery, healing resets entirely. Progress must start over.</p>
   <p>You see thinning that does not rebound.</p>
 
