--- a/tools-safety/why-expensive-tools-arent-always-better.html
+++ b/tools-safety/why-expensive-tools-arent-always-better.html
@@ -80,7 +80,7 @@
   <p>Electric tools feel smoother and gas tools feel stronger, but neither changes the shape of the yard. Tight corners, obstacles, and short runs still produce clipped spots, overlaps, or missed edges.</p>
   <p>The same flaws appear regardless of the engine.</p>
 
-  <h2>The irreversible boundary is loss of controllable contact</h2>
+  <h2>Precise engagement disappears entirely</h2>
   <p>Once output exceeds what can be guided reliably, adjustments stop improving results. Slowing down only spreads mistakes, and every pass creates a new flaw next to the last.</p>
   <p>At that point, damage accumulates even as effort increases.</p>
 
