--- a/tools-safety/why-eye-protection-is-ignored.html
+++ b/tools-safety/why-eye-protection-is-ignored.html
@@ -84,7 +84,7 @@
   <p>When nothing bad happens for weeks, the brain starts treating that streak as evidence. Urgency drops further because repetition feels like proof.</p>
   <p>You stop noticing how often you wipe your eyes with dirty gloves.</p>
 
-  <h2>The irreversible boundary is a direct strike to the eye</h2>
+  <h2>Eye impact causes immediate injury</h2>
   <p>Once something lands in the eye at speed, the system is done pretending it was optional. From that point on, recovery is not guaranteed, and the day changes immediately.</p>
   <p>You feel a sudden hot jab and your vision turns watery or smeared on the spot.</p>
 
