--- a/tools-safety/why-footwear-matters-for-yard-work.html
+++ b/tools-safety/why-footwear-matters-for-yard-work.html
@@ -80,7 +80,7 @@
   <p>As support softens or grip fades, posture shifts without awareness.</p>
   <p>The body leans harder into tools, increasing instability.</p>
 
-  <h2>The irreversible boundary is uncontrolled footing</h2>
+  <h2>Unstable footing leads to sudden imbalance</h2>
   <p>Once feet slide without warning, recovery is no longer possible in the moment.</p>
   <p>Falls, collisions, or tool contact occur before balance can be restored.</p>
 
