--- a/tools-safety/why-gloves-prevent-long-term-damage.html
+++ b/tools-safety/why-gloves-prevent-long-term-damage.html
@@ -84,7 +84,7 @@
   <p>Fast-moving systems multiply vibration and impact frequency.</p>
   <p>This becomes clear with equipment described in <a href="/tools-safety/string-trimmer-basics-explained.html">String Trimmer Basics Explained</a>, where constant motion dominates use.</p>
 
-  <h2>The irreversible boundary is nerve desensitization</h2>
+  <h2>Sensory signaling dulls through prolonged overload</h2>
   <p>Once sensation drops below functional feedback, correction is no longer reliable.</p>
   <p>From that point on, damage continues even when effort stays the same.</p>
 
