--- a/tools-safety/why-heat-increases-accident-risk.html
+++ b/tools-safety/why-heat-increases-accident-risk.html
@@ -84,7 +84,7 @@
   <p>High temperatures speed corrosion and weaken materials already under load. Failure risk rises mid-task.</p>
   <p>The pattern aligns with <a href="/tools-safety/why-rust-ruins-equipment.html">Why Rust Ruins Equipment</a>, where exposure compounds damage.</p>
 
-  <h2>The irreversible boundary is heat exhaustion onset</h2>
+  <h2>Thermal fatigue begins overwhelming the body</h2>  
   <p>Once the body cannot shed heat fast enough, correction is no longer reliable. Control fails before awareness catches up.</p>
   <p>You feel dizzy or unfocused as movement continues.</p>
 
