--- a/tools-safety/why-improper-aeration-hurts-soil.html
+++ b/tools-safety/why-improper-aeration-hurts-soil.html
@@ -84,7 +84,7 @@
   <p>When soil support fails in patches, grass above experiences inconsistent footing. Growth weakens unevenly.</p>
   <p>The lawn develops irregular thinning that follows aeration paths.</p>
 
-  <h2>The irreversible boundary is structural breakdown</h2>
+  <h2>Load-bearing elements fail catastrophically</h2>
   <p>Once soil no longer firms back up between disturbances, it loses its ability to support turf.</p>
   <p>Beyond this point, additional aeration deepens instability instead of relieving it.</p>
 
