--- a/tools-safety/why-improper-lifting-causes-back-injuries.html
+++ b/tools-safety/why-improper-lifting-causes-back-injuries.html
@@ -84,7 +84,7 @@
   <p>Heavier or more complex tools can add strain despite higher price. Weight still obeys physics.</p>
   <p>This aligns with <a href="/tools-safety/why-expensive-tools-arent-always-better.html">Why Expensive Tools Aren’t Always Better</a>, where mass outweighs features.</p>
 
-  <h2>The irreversible boundary is tissue overload</h2>
+  <h2>Biological capacity collapses under excessive strain</h2>
   <p>Once fibers stretch or tear, recovery is no longer immediate. The injury is already set.</p>
   <p>You feel a sharp catch that stops the lift.</p>
 
