--- a/tools-safety/why-improper-tool-choice-wastes-time.html
+++ b/tools-safety/why-improper-tool-choice-wastes-time.html
@@ -84,7 +84,7 @@
   <p>When results are inconsistent, confidence drops. Each choice takes longer as uncertainty grows.</p>
   <p>You hesitate before every pass.</p>
 
-  <h2>The irreversible boundary is sunk time</h2>
+  <h2>Invested effort becomes unrecoverable</h2>
   <p>Once hours are spent with the wrong tool, that time cannot be recovered. Switching later only stops further loss.</p>
   <p>You realize the day is gone before the job is finished.</p>
 
