--- a/tools-safety/why-leaving-debris-smothers-lawns.html
+++ b/tools-safety/why-leaving-debris-smothers-lawns.html
@@ -84,7 +84,7 @@
   <p>When planning breaks down, debris remains untouched longer than intended.</p>
   <p>The same avoidance appears in <a href="/tools-safety/why-safety-planning-is-ignored.html">Why Safety Planning Is Ignored</a>, where inaction allows conditions to worsen.</p>
 
-  <h2>The irreversible boundary is prolonged smothering</h2>
+  <h2>Extended suffocation prevents recovery</h2>
   <p>Once grass remains covered long enough to lose structure, it cannot rebound when exposed.</p>
   <p>Clearing reveals thin or bare soil instead of recovery.</p>
 
