--- a/tools-safety/why-most-yard-injuries-are-avoidable.html
+++ b/tools-safety/why-most-yard-injuries-are-avoidable.html
@@ -84,7 +84,7 @@
   <p>Debris shifts underfoot, objects get pulled into moving parts, and visibility drops. The work feels easy until it isn’t.</p>
   <p>This mirrors <a href="/tools-safety/blowers-vs-rakes-for-lawn-cleanup.html">Blowers vs Rakes for Lawn Cleanup</a>, where movement changes hazards.</p>
 
-  <h2>The irreversible boundary is lost reaction time</h2>
+  <h2>Response delay eliminates corrective opportunity</h2>
   <p>Once an unexpected event starts, prevention is over. The body can only react, and reaction is always late.</p>
   <p>You realize it happened after you already moved.</p>
 
