--- a/tools-safety/why-mower-height-is-often-wrong.html
+++ b/tools-safety/why-mower-height-is-often-wrong.html
@@ -81,7 +81,7 @@
   <p>On firm or uneven soil, low mower settings transfer more impact to the grass. Blades ride closer to the surface instead of floating.</p>
   <p>This effect is especially obvious in lawns like those discussed in <a href="/lawn-basics/can-grass-grow-on-clay-soil.html">Can Grass Grow on Clay Soil</a>, where scalping appears faster.</p>
 
-  <h2>The irreversible boundary is repeated scalping</h2>
+  <h2>Recurring crown removal accelerates damage</h2>
   <p>Once the same areas are cut too low repeatedly, grass fails to fill back in. Soil stays exposed and edges of bare spots expand.</p>
   <p>At that point, even higher settings no longer restore a uniform look.</p>
 
