--- a/tools-safety/why-mowers-cause-most-yard-injuries.html
+++ b/tools-safety/why-mowers-cause-most-yard-injuries.html
@@ -88,7 +88,7 @@
   <p>When response feels off, users push harder instead of stopping.</p>
   <p>This escalation follows <a href="/tools-safety/when-yard-work-causes-more-harm-than-good.html">When Yard Work Causes More Harm Than Good</a>, where force replaces precision.</p>
 
-  <h2>The irreversible boundary is uncontrolled forward motion</h2>
+  <h2>Unchecked momentum drives continued advance</h2>
   <p>Once the mower moves without matching input, correction is no longer possible.</p>
   <p>Injury occurs before reaction can intervene.</p>
 
