--- a/tools-safety/why-night-yard-work-is-risky.html
+++ b/tools-safety/why-night-yard-work-is-risky.html
@@ -84,7 +84,7 @@
   <p>Darkness compresses decision time and encourages pushing through. Stops feel more disruptive.</p>
   <p>The pattern aligns with <a href="/tools-safety/why-safety-planning-is-ignored.html">Why Safety Planning Is Ignored</a>, where momentum overrides caution.</p>
 
-  <h2>The irreversible boundary is unseen contact</h2>
+  <h2>Hidden collision triggers sudden damage</h2>
   <p>Once a tool or foot strikes something not seen, recovery is no longer possible mid-motion. The outcome is fixed.</p>
   <p>You feel or hear impact before understanding what was hit.</p>
 
