--- a/tools-safety/why-off-season-care-matters.html
+++ b/tools-safety/why-off-season-care-matters.html
@@ -80,7 +80,7 @@
   <p>Extra force or repeated passes compensate briefly for dormant damage.</p>
   <p>Performance seems acceptable until sudden failure or visible decline appears.</p>
 
-  <h2>The irreversible boundary is resumed use without stability</h2>
+  <h2>Operation continues before balance returns</h2>
   <p>Once tools or lawns are stressed before they stabilize, deterioration accelerates.</p>
   <p>From that point on, correction becomes reaction instead of prevention.</p>
 
