--- a/tools-safety/why-over-edging-harms-lawns.html
+++ b/tools-safety/why-over-edging-harms-lawns.html
@@ -84,7 +84,7 @@
   <p>Working repeatedly at borders places tools close to feet and hard surfaces. Control errors become more likely as precision drops.</p>
   <p>The danger aligns with <a href="/tools-safety/mistakes-that-increase-injury-risk.html">Mistakes That Increase Injury Risk</a>, where repetition magnifies exposure.</p>
 
-  <h2>The irreversible boundary is edge loss</h2>
+  <h2>Margin disappearance signals failure</h2>
   <p>Once grass can no longer reach the original boundary, the lawn has lost ground permanently. Soil remains exposed and unstable.</p>
   <p>From that point on, edging widens the bare strip instead of defining it.</p>
 
