--- a/tools-safety/why-pets-are-at-risk-during-yard-work.html
+++ b/tools-safety/why-pets-are-at-risk-during-yard-work.html
@@ -84,7 +84,7 @@
   <p>Familiar routines make proximity feel normal. Pets move while the operator stays focused forward.</p>
   <p>The pattern aligns with <a href="/tools-safety/how-experience-reduces-tool-damage.html">How Experience Reduces Tool Damage</a>, where repetition hides risk.</p>
 
-  <h2>The irreversible boundary is sudden contact</h2>
+  <h2>Abrupt impact causes immediate damage</h2>
   <p>Once a pet meets debris or moving parts, separation no longer exists. Recovery is immediate and uncertain.</p>
   <p>You hear a yelp and everything stops.</p>
 
