--- a/tools-safety/why-proper-training-matters-for-homeowners.html
+++ b/tools-safety/why-proper-training-matters-for-homeowners.html
@@ -84,7 +84,7 @@
   <p>Hand-powered tools transmit feedback directly. They make errors obvious before damage spreads.</p>
   <p>This aligns with <a href="/tools-safety/when-manual-tools-make-more-sense.html">When Manual Tools Make More Sense</a>, where control stays visible.</p>
 
-  <h2>The irreversible boundary is ingrained misuse</h2>
+  <h2>Habitual error becomes embedded</h2>
   <p>Once poor habits harden, correction becomes unlikely mid-task. The outcome is set by routine.</p>
   <p>You repeat the same mistake without noticing it.</p>
 
