--- a/tools-safety/why-replacing-tools-fixes-lawn-issues.html
+++ b/tools-safety/why-replacing-tools-fixes-lawn-issues.html
@@ -84,7 +84,7 @@
   <p>Owning more equipment does not solve a failing core tool. Replacement often outperforms accumulation.</p>
   <p>This mirrors <a href="/tools-safety/lawn-tools-most-people-dont-need.html">Lawn Tools Most People Don’t Need</a>, where quantity hides the real issue.</p>
 
-  <h2>The irreversible boundary is structural tool wear</h2>
+  <h2>Tool integrity degrades through cumulative wear</h2>
   <p>Once components lose true shape or integrity, correction is impossible in use. Performance cannot return.</p>
   <p>You feel vibration or drag that never fully goes away.</p>
 
