--- a/tools-safety/why-rushing-causes-tool-injuries.html
+++ b/tools-safety/why-rushing-causes-tool-injuries.html
@@ -84,7 +84,7 @@
   <p>Urgency tunnels attention forward. Peripheral movement stops registering.</p>
   <p>You fail to notice motion beside you until it is close.</p>
 
-  <h2>The irreversible boundary is loss of coordinated timing</h2>
+  <h2>Coordination breaks as timing decouples</h2>
   <p>Once timing between eyes, hands, and feet breaks, recovery is not possible mid-motion. From that point, impact happens before thought.</p>
   <p>You realize the error only after contact.</p>
 
