--- a/tools-safety/why-rust-ruins-equipment.html
+++ b/tools-safety/why-rust-ruins-equipment.html
@@ -84,7 +84,7 @@
   <p>Corrosion travels into joints and fasteners hidden from view.</p>
   <p>Sudden binding or seizing appears without warning during use.</p>
 
-  <h2>The irreversible boundary is material loss</h2>
+  <h2>Substance depletion undermines integrity</h2>
   <p>Once rust removes enough metal, original tolerances cannot be restored.</p>
   <p>From that point on, operation accelerates failure instead of work.</p>
 
