--- a/tools-safety/why-safety-features-get-ignored.html
+++ b/tools-safety/why-safety-features-get-ignored.html
@@ -84,7 +84,7 @@
   <p>Larger machines normalize danger through capability. Speed and weight make outcomes feel controlled until they are not.</p>
   <p>The pattern mirrors <a href="/tools-safety/why-mowers-cause-most-yard-injuries.html">Why Mowers Cause Most Yard Injuries</a>, where scale dominates mistakes.</p>
 
-  <h2>The irreversible boundary is unexpected contact</h2>
+  <h2>Surprise collision introduces immediate risk</h2>
   <p>Once motion meets flesh or obstruction, correction no longer matters. The system reveals what was ignored.</p>
   <p>You hear impact before you understand it.</p>
 
