--- a/tools-safety/why-safety-planning-is-ignored.html
+++ b/tools-safety/why-safety-planning-is-ignored.html
@@ -84,7 +84,7 @@
   <p>Phones, schedules, and interruptions pull focus away from preparation. Planning never fully forms.</p>
   <p>You split attention before work begins.</p>
 
-  <h2>The irreversible boundary is lost awareness</h2>
+  <h2>Attention fades beyond perception</h2>
   <p>Once attention drops during operation, recovery time vanishes. Reaction replaces prevention.</p>
   <p>You notice danger only after moving.</p>
 
