--- a/tools-safety/why-slopes-increase-tool-danger.html
+++ b/tools-safety/why-slopes-increase-tool-danger.html
@@ -84,7 +84,7 @@
   <p>Slopes look manageable until movement starts. The risk hides in motion, not appearance.</p>
   <p>The pattern matches <a href="/tools-safety/why-yard-work-is-more-dangerous-than-it-looks.html">Why Yard Work Is More Dangerous Than It Looks</a>, where calm scenes turn active.</p>
 
-  <h2>The irreversible boundary is loss of footing</h2>
+  <h2>Balance failure triggers instability</h2>
   <p>Once feet slide faster than correction, recovery is no longer possible. Gravity commits the outcome.</p>
   <p>You realize the fall only after momentum takes over.</p>
 
