--- a/tools-safety/why-tool-weight-matters.html
+++ b/tools-safety/why-tool-weight-matters.html
@@ -80,7 +80,7 @@
   <p>Managing extra weight often leads to altered grips or disabled features meant to stabilize motion. Those changes reduce predictability.</p>
   <p>The risk pattern mirrors <a href="/tools-safety/why-disabling-safety-features-is-dangerous.html">Why Disabling Safety Features Is Dangerous</a>, where loss of control shows up before injury does.</p>
 
-  <h2>The irreversible boundary is sustained compression</h2>
+  <h2>Prolonged pressure prevents elastic recovery</h2>
   <p>When tool weight leaves impressions that do not rebound between uses, the surface has stopped absorbing load. Grass remains flattened, soil stays firmed, and edges lose definition.</p>
   <p>Beyond this point, lighter touch does not reverse the marks.</p>
 
