--- a/tools-safety/why-trimmers-damage-grass-edges.html
+++ b/tools-safety/why-trimmers-damage-grass-edges.html
@@ -84,7 +84,7 @@
   <p>Trimmers operate close to legs, feet, and hard surfaces. Loss of control happens abruptly.</p>
   <p>The risk pattern mirrors <a href="/tools-safety/why-yard-work-is-more-dangerous-than-it-looks.html">Why Yard Work Is More Dangerous Than It Looks</a>, where proximity amplifies consequences.</p>
 
-  <h2>The irreversible boundary is edge collapse</h2>
+  <h2>Rim gives way under load</h2>
   <p>Once grass can no longer fill the boundary, soil stays exposed and edges crumble inward.</p>
   <p>From that point on, each trim enlarges the bare strip.</p>
 
