--- a/tools-safety/why-uneven-spreading-causes-problems.html
+++ b/tools-safety/why-uneven-spreading-causes-problems.html
@@ -84,7 +84,7 @@
   <p>Spreaders that release material inconsistently exaggerate every pass error.</p>
   <p>This pattern matches <a href="/tools-safety/why-calibration-matters-for-spreaders.html">Why Calibration Matters for Spreaders</a>, where small inaccuracies scale across the lawn.</p>
 
-  <h2>The irreversible boundary is mixed growth stages</h2>
+  <h2>Divergent development phases create conflict</h2>
   <p>Once parts of the lawn advance while others fall behind, they stop responding together.</p>
   <p>No later adjustment brings them back into sync during the same season.</p>
 
