--- a/tools-safety/why-yard-work-causes-long-term-pain.html
+++ b/tools-safety/why-yard-work-causes-long-term-pain.html
@@ -84,7 +84,7 @@
   <p>The body needs more time to reset as exposure continues. Work stays the same while repair slows.</p>
   <p>You wake up stiff even after light work.</p>
 
-  <h2>The irreversible boundary is structural tissue change</h2>
+  <h2>Internal fibers undergo lasting alteration</h2>
   <p>Once joints, discs, or tendons degrade, they do not return to baseline. Pain becomes part of movement.</p>
   <p>You feel discomfort during tasks that never hurt before.</p>
 
