--- a/tools-safety/why-yard-work-is-more-dangerous-than-it-looks.html
+++ b/tools-safety/why-yard-work-is-more-dangerous-than-it-looks.html
@@ -84,7 +84,7 @@
   <p>Grass density, moisture, and debris alter resistance unexpectedly. Familiar motions produce new reactions.</p>
   <p>The surface behaves differently than last time.</p>
 
-  <h2>The irreversible boundary is loss of recovery margin</h2>
+  <h2>Remaining buffer for repair disappears</h2>
   <p>Once awareness and control slip together, correction arrives too late. The incident is already in motion.</p>
   <p>You realize danger only after reacting.</p>
 
