--- a/watering-irrigation/best-time-of-day-to-water-a-lawn.html
+++ b/watering-irrigation/best-time-of-day-to-water-a-lawn.html
@@ -84,7 +84,7 @@
   <p>Watering at times that reduce soak only wets the top layer. Roots never see stable moisture below.</p>
   <p>This follows <a href="/watering-irrigation/why-shallow-watering-fails.html">Why Shallow Watering Fails</a>, where depth never develops.</p>
 
-  <h2>The irreversible boundary is oxygen loss</h2>
+  <h2>Air deprivation halts functional capacity</h2>
   <p>When wetness persists long enough, air is pushed out of the root zone and roots begin to fail. From that point on, the lawn weakens even if watering changes.</p>
   <p>The grass turns dull and loses spring.</p>
 
