--- a/watering-irrigation/how-long-to-water-a-lawn-each-time.html
+++ b/watering-irrigation/how-long-to-water-a-lawn-each-time.html
@@ -84,7 +84,7 @@
   <p>Grass can stay green while soil below degrades. Duration errors stay hidden until performance drops.</p>
   <p>You see decline days after watering looked successful.</p>
 
-  <h2>The irreversible boundary is soil deformation</h2>
+  <h2>Ground structure warps under pressure</h2>
   <p>Once pore space collapses from excess saturation, normal drainage does not return quickly. Water behavior is permanently altered.</p>
   <p>The surface stays soft long after drying weather.</p>
 
