--- a/watering-irrigation/how-much-water-grass-actually-needs.html
+++ b/watering-irrigation/how-much-water-grass-actually-needs.html
@@ -84,7 +84,7 @@
   <p>Consistently wet soil trains shallow roots. Deeper zones stop developing.</p>
   <p>You see roots near the surface when soil is disturbed.</p>
 
-  <h2>The irreversible boundary is oxygen displacement</h2>
+  <h2>Breathable air gets forced aside</h2>
   <p>Once water pushes air out of the root zone, recovery slows sharply. Roots begin to fail.</p>
   <p>The grass turns dull or grayish.</p>
 
