--- a/watering-irrigation/how-often-lawns-should-be-watered.html
+++ b/watering-irrigation/how-often-lawns-should-be-watered.html
@@ -84,7 +84,7 @@
   <p>Frequent watering trains roots to stay shallow. Deeper layers stop developing.</p>
   <p>The grass pulls up easily when disturbed.</p>
 
-  <h2>The irreversible boundary is root suffocation</h2>
+  <h2>Roots lose gas exchange entirely</h2>
   <p>Once oxygen is displaced repeatedly, roots decline faster than they can regrow.</p>
   <p>The lawn turns dull and loses spring.</p>
 
